@@ -94,7 +94,7 @@ public class StudentServiceTest {
         assertEquals(AccountType.PREMIUM, studentService.getStudentById(student.getId()).getAccountType(),
                 "Com 11 cursos completos, conta não deve ter sido recompensada aprimorada para premium."); // Assertion
 
-        studentService.concludeCourse(student.getId(), courses.getLast().getId(), 7d); // Action
+        studentService.concludeCourse(student.getId(), courses.get((courses.size() - 1)).getId(), 7d); // Action
 
         assertEquals(AccountType.PREMIUM, studentService.getStudentById(student.getId()).getAccountType(),
                 "Ao completar 12 curso, conta deve ser aprimorada para premium."); // Assertion
